# ml-cv

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  PKG-INFO  README.md  pyproject.toml  requirements_prod.txt  setup.py
.github/workflows/: python-package.yml
tests/: test_demo.py  test_yolo_demo.py
yolo-demo/: pyproject.toml
yolo-demo/yolo_demo/: demo.py
yolo-demo/yolo_demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
yolo-demo/yolo_demo/core/: backbone.py
yolo_demo/: demo.py  web.py  yolov3_nano_416.json
yolo_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
yolo_demo/core/: backbone.py  common.py  config.py  dataset.py  utils.py  yolov3.py
