[tool.poetry]
name = "yolo-demo"
version = "0.1.0"
description = ""
authors = ["Angry Fennec <shellfix@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
Pillow = "^9.0.1"
tensorflow = "2.8.0"
easydict = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
